--- a/QTasMarketing.Web/Areas/Admin/Views/Content/_CreateOrUpdate.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Content/_CreateOrUpdate.cshtml
@@ -14,8 +14,9 @@
                                           .Name("Groups")
                                           .DataValueField("Id")
                                           .DataTextField("Title")
-                                         .DataSource(datasource => datasource.Read(read => read.Action("ComboBox_Read", "Content")))
-                                          .Value(Model.GroupId.ToString()))
+                                         .DataSource(datasource => datasource.Read(read => read.Action("ComboBox_Read", "Content"))).Events(events=>events.DataBound("onDataBound"))
+                                         .Value(Model.GroupId.ToString()) )
+                    )
 
                 </div>
             </div>
@@ -23,7 +24,7 @@
             <div class="form-group">
 
                 @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-1" })
-                <div class="col-md-2">
+                <div class="col-md-6">
                     @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control date-textbox" } })
                     @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
                 </div>
@@ -34,13 +35,21 @@
                 @Html.LabelFor(model => model.IsAllowedComment, htmlAttributes: new { @class = "control-label col-md-1" })
                 <div class="col-md-2 ">
                     @Html.CheckBoxFor(model => model.IsAllowedComment, new { htmlAttributes = new { @class = "form-control " } })
-                    </div>
+                </div>
             </div>
             <div class="form-group">
                 @Html.LabelFor(model => model.Lead, htmlAttributes: new { @class = "control-label col-md-1" })
-                <div class="col-md-2 ">
+                <div class="col-md-6 ">
                     @Html.EditorFor(model => model.Lead, new { htmlAttributes = new { @class = "form-control date-textbox" } })
                     @Html.ValidationMessageFor(model => model.Lead, "", new { @class = "text-danger" })
+
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Body, htmlAttributes: new { @class = "control-label col-md-1" })
+                <div class="col-md-10 ">
+                    @Html.Kendo().EditorFor(model=>model.Body)
+                    @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
 
                 </div>
             </div>
@@ -49,3 +58,9 @@
     </div>
 
 </div>
+<script>
+    function onDataBound(e) {
+        var defaultItem = e.sender.dataSource.at(0);
+        e.sender.value(defaultItem.ProductID);
+    }
+</script>
