--- a/QTasMarketing.Web/Areas/Admin/Views/Group/Create.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Group/Create.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Kendo.Mvc.UI
-@model QTasMarketing.Web.Framework.ViewModel.Content.GroupViewModel
+@using Portal.Web.Framework.ViewModel.Content
+@model Portal.Web.Framework.ViewModel.Content.GroupViewModel
 @{
     ViewData["Title"] = "ایجاد گروه ها";
     Layout = "~/Views/Shared/_AdminLayOut.cshtml";
