--- a/QTasMarketing.Web/Views/Shared/_AdminLayOut.cshtml
+++ b/QTasMarketing.Web/Views/Shared/_AdminLayOut.cshtml
@@ -26,6 +26,8 @@
     <link href="~/lib/Kendo/css/kendo.common.min.css" rel="stylesheet" />
     <link href="~/lib/Kendo/css/kendo.default.min.css" rel="stylesheet" />
     <link href="~/lib/Kendo/css/kendo.rtl.min.css" rel="stylesheet" />
+    
+    <link href="~/lib/Select2/css/select2.min.css" rel="stylesheet" />
 
     <!-- jQuery 3 -->
 
@@ -40,6 +42,10 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     <script src="~/lib/AdminLte/js/adminlte.js"></script>
     <script src="~/lib/AdminLte/js/demo.js"></script>
+
+    <!--Select2-->
+    <script src="~/lib/Select2/js/select2.min.js"></script>
+
 
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
@@ -713,8 +719,8 @@
 
     @await Component.InvokeAsync("NToastNotify")
 
-<script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 
 </body>
 </html>
