Add BreadCrumnName For Group

--- a/QTasMarketing.Web/Areas/Admin/Views/Content/List.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Content/List.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Kendo.Mvc.UI
-@using QTasMarketing.Web.Framework.ViewModel.Content
-@model QTasMarketing.Web.Framework.ViewModel.Content.ContentViewModel
+@using Portal.Web.Framework.ViewModel.Content
+@model Portal.Web.Framework.ViewModel.Content.ContentViewModel
 @{
     ViewData["Title"] = "لیست محتوا ";
     Layout = "~/Views/Shared/_AdminLayOut.cshtml";
