--- a/QTasMarketing.Web/Areas/Admin/Views/Group/_CreateOrUpdate.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Group/_CreateOrUpdate.cshtml
@@ -12,7 +12,7 @@
             <div class="form-group">
                 @Html.Label("", "گروه والد", new { @class = "control-label col-md-3" })
                 <div class="col-md-5">
-                   @Html.DropDownListFor(model=>model.ParentId,Model.AvaiableGroup ,new {@class="form-control",Id="Dropdown"} )
+                   @Html.DropDownListFor(model=>Model.ParentId,Model.AvaiableGroup ,new {@class="form-control",Id="Dropdown"} )
 
                 </div>
             </div>
