--- a/QTasMarketing.Web/Areas/Admin/Views/Content/_CreateOrUpdate.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Content/_CreateOrUpdate.cshtml
@@ -26,6 +26,15 @@
                     @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
                 </div>
             </div>
+            
+            <div class="form-group">
+
+                @Html.LabelFor(model => model.Lead, htmlAttributes: new { @class = "control-label col-md-1" })
+                <div class="col-md-6">
+                    @Html.EditorFor(model => model.Lead, new { htmlAttributes = new { @class = "form-control date-textbox" } })
+                    @Html.ValidationMessageFor(model => model.Lead, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
             <div class="form-group">
 
