--- a/QTasMarketing.Web/Areas/Admin/Views/Content/_CreateOrUpdate.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Content/_CreateOrUpdate.cshtml
@@ -50,12 +50,27 @@
                     @Html.ValidationMessageFor(model => model.Lead, "", new { @class = "text-danger" })
 
                 </div>
+
             </div>
             <div class="form-group">
                 @Html.LabelFor(model => model.Body, htmlAttributes: new { @class = "control-label col-md-1" })
                 <div class="col-md-10 ">
-                    @Html.Kendo().EditorFor(model=>model.Body)
-                    @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
+                    <div class="k-rtl" >
+                        @(Html.Kendo().EditorFor(x => x.Body)
+
+                              .HtmlAttributes(new {style = "height:440px"})
+                              //  .Tools(tools => tools.Clear().InsertImage().InsertFile())
+                              .ImageBrowser(imageBrowser => imageBrowser
+                                  .Image("~/shared/Images/{0}")
+                                  .Read("Read", "ImageEditor")
+                                  .Create("Create", "ImageEditor")
+                                  .Destroy("Destroy", "ImageEditor")
+                                  .Upload("Upload", "ImageEditor")
+                              )
+                              )
+                    </div>
+                   
+                    @Html.ValidationMessageFor(model => model.Body, "", new {@class = "text-danger"})
 
                 </div>
             </div>
