Add  Edit Content

--- a/QTasMarketing.Web/Areas/Admin/Views/Content/_CreateOrUpdate.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Content/_CreateOrUpdate.cshtml
@@ -65,8 +65,8 @@
                                   .Read("Read", "ImageEditor")
                                   .Create("Create", "ImageEditor")
                                   .Destroy("Destroy", "ImageEditor")
-                                  .Upload("Upload", "ImageEditor")
-                              )
+                                  .Upload("Upload", "ImageEditor"))
+                             
                               )
                     </div>
                    
