--- a/QTasMarketing.Web/Areas/Admin/Views/Content/Edit.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Content/Edit.cshtml
@@ -4,5 +4,32 @@
     Layout = "~/Views/Shared/_AdminLayOut.cshtml";
 }
 
-<h2>Edit</h2>
+@using (Html.BeginForm(null, null, FormMethod.Post, new {@class = "form-horizontal"}))
+{
+    <section class="content-header">
+        <div class="row">
+            <div class="col-md-12">
+                <ol class="breadcrumb">
+                    <li><a href="@Url.Action("List")"><i class="fa fa-dashboard "></i> ویرایش محتوا</a></li>
+                    <li class="active">@ViewBag.Title</li>
+                </ol>
+            </div>
+        </div>
+    </section>
+    <section class="content">
+        <div class="box box-info">
+            <div class="box-header with-border">
+                <div class="row">
+                    <div class="text-left">
+                        <button type="submit" class="btn btn-success"><i class="fa fa-save fa-lg"></i>ذخیره</button>
+
+                        <a href="@Url.Action("List")" class="btn btn-default"><i class="fa fa-backward fa-lg"></i>بازگشت</a>
+                    </div>
+                </div>
+            </div>
+            @Html.Partial("_CreateOrUpdate")
+        </div>
+
+    </section>
+}
 
