--- a/QTasMarketing.Web/Areas/Admin/Views/Content/List.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Content/List.cshtml
@@ -9,10 +9,10 @@
     <div class="box box-info">
         <div class="box-header with-border">
             <div class="col-md-6">
-                <h3 class="box-title">مدیریت گروه ها</h3>
+                <h3 class="box-title">مدیریت  محتوا</h3>
             </div>
             <div class="text-left col-md-6">
-                <a href="@Url.Action("Create")"  class="btn btn-primary"> <i class="fa fa-plus fa-lg "></i> گروه جدید</a>
+                <a href="@Url.Action("Create")"  class="btn btn-primary"> <i class="fa fa-plus fa-lg "></i>  جدید</a>
             
             </div>
           
