--- a/QTasMarketing.Web/Areas/Admin/Views/Content/Create.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Content/Create.cshtml
@@ -27,8 +27,38 @@
                     </div>
                 </div>
             </div>
-            @Html.Partial("_CreateOrUpdate")
+            
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="nav-tabs-custom">
+                        <ul class="nav nav-tabs pull-right">
+                            <li class="active"><a href="#tab_content" data-toggle="tab" aria-expanded="True">محتوا</a></li>
+                            <li class=""><a href="#tab_picature" data-toggle="tab" aria-expanded="false">تصاویر</a></li>
+
+                        </ul>
+                        <div class="tab-content">
+                            <div class="tab-pane" id="tab_content">
+                                @Html.Partial("_CreateOrUpdate")
+                            </div>
+                            <!-- /.tab-pane -->
+                            <div class="tab-pane" id="tab_picature">
+                                The European languages are members of the same family. Their separate existence is a myth.
+                                For science, music, sport, etc, Europe uses the same vocabulary. The languages only differ
+                                in their grammar, their pronunciation and their most common words. Everyone realizes why a
+                                new common language would be desirable: one could refuse to pay expensive translators. To
+                                achieve this, it would be necessary to have uniform grammar, pronunciation and more common
+                                words. If several languages coalesce, the grammar of the resulting language is more simple
+                                and regular than that of the individual languages.
+                            </div>
+
+                        </div>
+                        <!-- /.tab-content -->
+                    </div>
+                </div>
+             
+            </div>
         </div>
+        
 
     </section>
 }
