--- a/QTasMarketing.Web/Areas/Admin/Views/Content/Create.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Content/Create.cshtml
@@ -21,7 +21,7 @@
             <div class="box-header with-border">
                 <div class="row">
                     <div class="text-left">
-                        <button type="submit" class="btn btn-success"><i class="fa fa-save fa-lg"></i>ذخیره</button>
+                        <button type="submit" name="save" class="btn btn-success"><i class="fa fa-save fa-lg"></i>ذخیره</button>
                         <button type="submit" name="save-continue" class="btn bg-blue">
                             <i class="fa fa-save fa-lg"></i>
                            ذخیره و ادامه
@@ -47,7 +47,7 @@
                                 </div>
                                 <!-- /.tab-pane -->
                                 <div class="tab-pane" id="tab_2-2">
-                                 
+                                    @Html.Partial("_ContentPicture")
                                 </div>
                                 <!-- /.tab-pane -->
                                 
