--- a/QTasMarketing.Web/Areas/Admin/Views/Content/_CreateOrUpdate.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Content/_CreateOrUpdate.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Kendo.Mvc.UI
-@model Portal.Web.Framework.ViewModel.Content.ContentViewModel
+@using QTasMarketing.Web.Areas.Admin.Models.Content
+@model QTasMarketing.Web.Areas.Admin.Models.Content.ContentViewModel
 <div class="box-body">
     
     @Html.HiddenFor(x => x.Id)
