--- a/QTasMarketing.Web/Areas/Admin/Views/Group/List.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Group/List.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Kendo.Mvc.UI
-@using Portal.Web.Framework.ViewModel.Content
+@using QTasMarketing.Web.Areas.Admin.Models.Content
 
 @{
     ViewData["Title"] = "List";
