--- a/QTasMarketing.Web/Views/Account/Login.cshtml
+++ b/QTasMarketing.Web/Views/Account/Login.cshtml
@@ -1,5 +1,6 @@
 ﻿
-@model LoginViewModel
+@using QTasMarketing.Web.Areas.Admin.Models.Memebership
+@model QTasMarketing.Web.Areas.Admin.Models.Memebership.LoginViewModel
 
 @{
     Layout = null;
