--- a/QTasMarketing.Web/Areas/Admin/Views/Group/Create.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Group/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Kendo.Mvc.UI
-@using Portal.Web.Framework.ViewModel.Content
-@model Portal.Web.Framework.ViewModel.Content.GroupViewModel
+@using QTasMarketing.Web.Areas.Admin.Models.Content
+@model QTasMarketing.Web.Areas.Admin.Models.Content.GroupViewModel
 @{
     ViewData["Title"] = "ایجاد گروه ها";
     Layout = "~/Views/Shared/_AdminLayOut.cshtml";
