--- a/QTasMarketing.Web/Areas/Admin/Views/Group/_CreateOrUpdate.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Group/_CreateOrUpdate.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Kendo.Mvc.UI
-@using Portal.Web.Framework.ViewModel.Content
-@model Portal.Web.Framework.ViewModel.Content.GroupViewModel
+@using QTasMarketing.Web.Areas.Admin.Models.Content
+@model QTasMarketing.Web.Areas.Admin.Models.Content.GroupViewModel
 <div class="box-body">
 
 
