--- a/QTasMarketing.Web/Areas/Admin/Views/Content/_CreateOrUpdate.Picture.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Content/_CreateOrUpdate.Picture.cshtml
@@ -1,23 +1,18 @@
-﻿@using Kendo.Mvc.UI
-@model QTasMarketing.Web.Areas.Admin.Models.Content.ContentViewModel
+﻿@model QTasMarketing.Web.Areas.Admin.Models.Content.ContentViewModel
 <link href="~/lib/fineuploader/fineuploader-4.2.2.css" rel="stylesheet" />
 <script src="~/lib/fineuploader/jquery.fineuploader-4.2.2.js"></script>
-<form method="post"
-      asp-controller="TestAjax"
-      asp-action="Index"
-        class="form-horizontal"
-    role="form"
-    data-ajax="true"
-    data-ajax-loading="#Progress"
-    data-ajax-success="myJsMethod">
+
 
 
     <div class="panel-group">
+        @if (Model.Id > 0)
+        {
         <div class="panel panel-default">
             <div class="panel-body">
 
             </div>
         </div>
+
         <div class="panel panel-default">
             <div class="panel-heading">
                 اضافه کردن تصویر جدید
@@ -33,101 +28,7 @@
                         <label asp-for="AddContentPictureModel.PictureId"></label>
                     </div>
                     <div class="col-md-4">
-                        <script type="text/template" id="qq-template-gallery">
-                            <div class="qq-uploader-selector qq-uploader qq-gallery" qq-drop-area-text="Drop files here">
-                                <div class="qq-total-progress-bar-container-selector qq-total-progress-bar-container">
-                                    <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" class="qq-total-progress-bar-selector qq-progress-bar qq-total-progress-bar"></div>
-                                </div>
-                                <div class="qq-upload-drop-area-selector qq-upload-drop-area" qq-hide-dropzone>
-                                    <span class="qq-upload-drop-area-text-selector"></span>
-                                </div>
-                                <div class="qq-upload-button-selector qq-upload-button">
-                                    <div>Upload a file</div>
-                                </div>
-                                <span class="qq-drop-processing-selector qq-drop-processing">
-                                    <span>Processing dropped files...</span>
-                                    <span class="qq-drop-processing-spinner-selector qq-drop-processing-spinner"></span>
-                                </span>
-                                <ul class="qq-upload-list-selector qq-upload-list" role="region" aria-live="polite" aria-relevant="additions removals">
-                                    <li>
-                                        <span role="status" class="qq-upload-status-text-selector qq-upload-status-text"></span>
-                                        <div class="qq-progress-bar-container-selector qq-progress-bar-container">
-                                            <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" class="qq-progress-bar-selector qq-progress-bar"></div>
-                                        </div>
-                                        <span class="qq-upload-spinner-selector qq-upload-spinner"></span>
-                                        <div class="qq-thumbnail-wrapper">
-                                            <img class="qq-thumbnail-selector" qq-max-size="120" qq-server-scale>
-                                        </div>
-                                        <button type="button" class="qq-upload-cancel-selector qq-upload-cancel">X</button>
-                                        <button type="button" class="qq-upload-retry-selector qq-upload-retry">
-                                            <span class="qq-btn qq-retry-icon" aria-label="Retry"></span>
-                                            Retry
-                                        </button>
 
-                                        <div class="qq-file-info">
-                                            <div class="qq-file-name">
-                                                <span class="qq-upload-file-selector qq-upload-file"></span>
-                                                <span class="qq-edit-filename-icon-selector qq-edit-filename-icon" aria-label="Edit filename"></span>
-                                            </div>
-                                            <input class="qq-edit-filename-selector qq-edit-filename" tabindex="0" type="text">
-                                            <span class="qq-upload-size-selector qq-upload-size"></span>
-                                            <button type="button" class="qq-btn qq-upload-delete-selector qq-upload-delete">
-                                                <span class="qq-btn qq-delete-icon" aria-label="Delete"></span>
-                                            </button>
-                                            <button type="button" class="qq-btn qq-upload-pause-selector qq-upload-pause">
-                                                <span class="qq-btn qq-pause-icon" aria-label="Pause"></span>
-                                            </button>
-                                            <button type="button" class="qq-btn qq-upload-continue-selector qq-upload-continue">
-                                                <span class="qq-btn qq-continue-icon" aria-label="Continue"></span>
-                                            </button>
-                                        </div>
-                                    </li>
-                                </ul>
-
-                                <dialog class="qq-alert-dialog-selector">
-                                    <div class="qq-dialog-message-selector"></div>
-                                    <div class="qq-dialog-buttons">
-                                        <button type="button" class="qq-cancel-button-selector">Close</button>
-                                    </div>
-                                </dialog>
-
-                                <dialog class="qq-confirm-dialog-selector">
-                                    <div class="qq-dialog-message-selector"></div>
-                                    <div class="qq-dialog-buttons">
-                                        <button type="button" class="qq-cancel-button-selector">No</button>
-                                        <button type="button" class="qq-ok-button-selector">Yes</button>
-                                    </div>
-                                </dialog>
-
-                                <dialog class="qq-prompt-dialog-selector">
-                                    <div class="qq-dialog-message-selector"></div>
-                                    <input type="text">
-                                    <div class="qq-dialog-buttons">
-                                        <button type="button" class="qq-cancel-button-selector">Cancel</button>
-                                        <button type="button" class="qq-ok-button-selector">Ok</button>
-                                    </div>
-                                </dialog>
-                            </div>
-                        </script>
-                        <div id="fine-uploader-gallery"></div>
-                        <script>
-                            var galleryUploader = new qq.FineUploader({
-                                element: document.getElementById("fine-uploader-gallery"),
-                                template: 'qq-template-gallery',
-                                request: {
-                                    endpoint: '/server/uploads'
-                                },
-                                thumbnails: {
-                                    placeholders: {
-                                        waitingPath: '/source/placeholders/waiting-generic.png',
-                                        notAvailablePath: '/source/placeholders/not_available-generic.png'
-                                    }
-                                },
-                                validation: {
-                                    allowedExtensions: ['jpeg', 'jpg', 'gif', 'png']
-                                }
-                            });
-                        </script>
                     </div>
 
                 </div>
@@ -140,10 +41,20 @@
                 </div>
             </div>
         </div>
+        }
+        else
+        {
+            <div class=" panel panel-default">
+                <div class="panel-body">
+                    ابتدا محتوا را ذخیره کنید سپس تصویر به آن اضافه کنید
+                </div>
+            </div>
+
+        }
     </div>
-    <button type="button"  id="SavePicture"  class="btn btn-primary" >ذخیره</button>
-    </form>
-    <script>
+    
+
+@*<script>
     function onSuccess(e) {
         if (e.operation == "upload") {
             for (var i = 0; i < e.files.length; i++) {
@@ -165,36 +76,14 @@
     function onRemove(e) {
 
         $("#images").children().remove();
-        }
-        $(function () {
-            alert("ok");
-             @*$("#SavePicture").click(function () {
-         
+    }
+                
 
-        $.ajax({
-            url: '/Admin/Content/MainAddressDetails',
-            type: 'POST',
-            contentType: "application/json; charset=utf-8",
-            dataType: 'json',
-            data: @Model,
-            success: function (data) {
-                alert(data.success);
-            },
-            error: function () {
-                alert("Error");
-            }
-        });
+</script>
+<style>
 
-        })*@
-
-
-        })
-       
-    </script>
-    <style>
-
-        .imageUpload {
-            width: 100px;
-            height: 120px;
-        }
-    </style>
+    .imageUpload {
+        width: 100px;
+        height: 120px;
+    }
+</style>*@
