--- a/QTasMarketing.Web/Areas/Admin/Views/Content/_CreateOrUpdate.Picture.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Content/_CreateOrUpdate.Picture.cshtml
@@ -28,7 +28,8 @@
                         <label asp-for="AddContentPictureModel.PictureId"></label>
                     </div>
                     <div class="col-md-4">
-
+                     
+                        @Html.EditorFor(model => model.AddContentPictureModel.PictureId)
                     </div>
 
                 </div>
