--- a/QTasMarketing.Web/Areas/Admin/Views/Shared/EditorTemplates/Picture.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Shared/EditorTemplates/Picture.cshtml
@@ -1,18 +1,17 @@
-﻿@using Portal.core
-@using Portal.Service
-@using Portal.Service.Media
-@model int
+﻿@model long
 @inject IPictureService pictureService
-
+@using Portal.Service.Media
+@using Portal.core
 @{
+
+    <link href="~/lib/fineuploader/fineuploader-4.2.2.css" rel="stylesheet" />
+    <script src="~/lib/fineuploader/jquery.fineuploader-4.2.2.js"></script>
     //other variables
     var random = CommonHelper.GenerateRandomInteger();
     var clientId = "picture" + random;
     var picture = pictureService.GetPictureById(Model);
-    const int pictureSize = 100;
+
 }
-<link href="~/lib/fineuploader/fineuploader-4.2.2.css" rel="stylesheet" />
-<script src="~/lib/fineuploader/jquery.fineuploader-4.2.2.js"></script>
 
 <div id="@(clientId + "value")">
     <input type="hidden" asp-for="@Model" />
@@ -20,7 +19,7 @@
 <div class="row">
     <div class="col-md-12">
         <div id="@(clientId + "image")" class="uploaded-image">
-            <img src="@(pictureService.GetPictureUrl(Model, pictureSize, true))" />
+            <img src="" />
         </div>
     </div>
 </div>
@@ -35,26 +34,25 @@
         <div class="remove-image-button pull-left margin-t-5">
             @if (picture != null)
             {
-                <span id="@(clientId + "remove")" class="btn bg-red">حذف </span>
+                <span id="@(clientId + "remove")" class="btn bg-red">حذف تصویر</span>
             }
             else
             {
-                <span id="@(clientId + "remove")" class="btn bg-red" style="display: none;">حذف</span>
+                <span id="@(clientId + "remove")" class="btn bg-red" style="display: none;">حذف تصویر</span>
             }
         </div>
     </div>
 </div>
-@*fine uploader template (keep it synchronized to \Content\fineuploader\templates\default.html)*@
 <script type="text/template" id="@(clientId)-qq-template">
     <div class="qq-uploader-selector qq-uploader">
         <div class="qq-upload-drop-area-selector qq-upload-drop-area" qq-hide-dropzone>
-            <span>@T("Common.FileUploader.DropFiles")</span>
+            <span>حذف</span>
         </div>
         <div class="qq-upload-button-selector qq-upload-button">
-            <div>@T("Common.FileUploader.Upload")</div>
+            <div>بارگذاری</div>
         </div>
         <span class="qq-drop-processing-selector qq-drop-processing">
-            <span>@T("Common.FileUploader.Processing")</span>
+            <span>در حال پردازش</span>
             <span class="qq-drop-processing-spinner-selector qq-drop-processing-spinner"></span>
         </span>
         <ul class="qq-upload-list-selector qq-upload-list">
@@ -91,7 +89,7 @@
             }
         });
         $("#@(clientId + "remove")").click(function(e) {
-            $("#@(clientId + "image")").html("<img src='@pictureService.GetDefaultPictureUrl(pictureSize)'/>");
+            $("#@(clientId + "image")").html("<img/>");
             $("#@(clientId + "value") input").val(0);
             $(this).hide();
         });
