--- a/QTasMarketing.Web/Views/Shared/_AdminLayOut.cshtml
+++ b/QTasMarketing.Web/Views/Shared/_AdminLayOut.cshtml
@@ -26,15 +26,14 @@
     <link href="~/lib/Kendo/css/kendo.common.min.css" rel="stylesheet" />
     <link href="~/lib/Kendo/css/kendo.default.min.css" rel="stylesheet" />
     <link href="~/lib/Kendo/css/kendo.rtl.min.css" rel="stylesheet" />
-
     <link href="~/lib/Select2/css/select2.min.css" rel="stylesheet" />
-
     
-
     <!-- jQuery 3 -->
+    
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.0.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.16.0/jquery.validate.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.6/jquery.validate.unobtrusive.min.js"></script>
 
-
-    <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/Kendo/js/kendo.all.min.js"></script>
     <script src="~/lib/Kendo/js/kendo.aspnetmvc.min.js"></script>
 
@@ -48,9 +47,8 @@
     <!--Select2-->
     <script src="~/lib/Select2/js/select2.min.js"></script>
 
-    <script src="~/lib/jquery-ajax-unobtrusive/dist/jquery.unobtrusive-ajax.js"></script>
-    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js"></script>
+
+
 
 
 
@@ -727,8 +725,6 @@
 
     @await Component.InvokeAsync("NToastNotify")
 
-    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 
 </body>
 </html>
