--- a/QTasMarketing.Web/Areas/Admin/Views/Content/_CreateOrUpdate.Picture.cshtml
+++ b/QTasMarketing.Web/Areas/Admin/Views/Content/_CreateOrUpdate.Picture.cshtml
@@ -1,12 +1,13 @@
-﻿@model QTasMarketing.Web.Areas.Admin.Models.Content.ContentViewModel
+﻿@using Kendo.Mvc.UI
+@model QTasMarketing.Web.Areas.Admin.Models.Content.ContentViewModel
 <link href="~/lib/fineuploader/fineuploader-4.2.2.css" rel="stylesheet" />
 <script src="~/lib/fineuploader/jquery.fineuploader-4.2.2.js"></script>
 
 
 
-    <div class="panel-group">
-        @if (Model.Id > 0)
-        {
+<div class="panel-group">
+    @if (Model.Id > 0)
+    {
         <div class="panel panel-default">
             <div class="panel-body">
 
@@ -28,8 +29,25 @@
                         <label asp-for="AddContentPictureModel.PictureId"></label>
                     </div>
                     <div class="col-md-4">
-                     
-                        @Html.EditorFor(model => model.AddContentPictureModel.PictureId)
+
+                        @Html.HiddenFor(model => model.AddContentPictureModel.PictureId)
+
+                        @(Html.Kendo().Upload()
+                                      .Name("files")
+                                      .Async(a => a
+                                          .Save("Save", "Media", new { Model.AddContentPictureModel.PictureId })
+                                          .Remove("Remove", "Media", new { Model.AddContentPictureModel.PictureId })
+                                          .AutoUpload(true)
+                                      )
+                                      .Events(events => events
+                                      .Remove("onRemove")
+                                      .Success("onSuccess"))
+                                      .Multiple(false)
+                                      .Validation(validation =>
+                                      {
+                                          validation.AllowedExtensions(new string[] { ".jpg", ".jpeg", ".png", ".bmp", ".gif" });
+                                          validation.MinFileSize(500);
+                                      }))
                     </div>
 
                 </div>
@@ -40,27 +58,34 @@
                     </div>
 
                 </div>
-            </div>
-        </div>
-        }
-        else
-        {
-            <div class=" panel panel-default">
-                <div class="panel-body">
-                    ابتدا محتوا را ذخیره کنید سپس تصویر به آن اضافه کنید
+                <div class="form-group">
+                    <div class="col-md-9  col-md-offset-3">
+                        <button type="button" id="addContentPicture" class="btn btn-primary">
+                            ذخیره
+                        </button>
+                    </div>
                 </div>
             </div>
+        </div>
+    }
+    else
+    {
+        <div class=" panel panel-default">
+            <div class="panel-body">
+                ابتدا محتوا را ذخیره کنید سپس تصویر به آن اضافه کنید
+            </div>
+        </div>
 
-        }
-    </div>
-    
+    }
+</div>
 
-@*<script>
+
+<script>
     function onSuccess(e) {
         if (e.operation == "upload") {
             for (var i = 0; i < e.files.length; i++) {
                 var file = e.files[i].rawFile;
-
+               
                 if (file) {
                     var reader = new FileReader();
 
@@ -69,6 +94,8 @@
                     };
 
                     reader.readAsDataURL(file);
+                    alert("@Html.IdFor(m=>m.AddContentPictureModel.PictureId)");
+                 
                 }
             }
         }
@@ -78,7 +105,7 @@
 
         $("#images").children().remove();
     }
-                
+
 
 </script>
 <style>
@@ -87,4 +114,4 @@
         width: 100px;
         height: 120px;
     }
-</style>*@
+</style>
